# internal-developer-platform

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .vale.ini  .yamllint.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  NOTICE  OWNERS.md  README.md  SECURITY.md  docker-compose.yml  mvnw  mvnw.cmd  pom.xml
.devcontainer/: Dockerfile  devcontainer.json  init-certs.sh  (+1 more)
docs/: .gitignore  pyproject.toml  zensical.toml
docs/src/: index.md
docs/src/api/: index.md
docs/src/concepts/: audit.md  entities-depth-display.md  entities.md  entity-filtering.md  entity-templates.md  index.md  properties.md  relations.md  webhooks.md
docs/src/contributing/: ci-workflow.md  development-setup.md  documentation.md  index.md  owasp-zap-security.md  pull-requests.md  testing.md
docs/src/contributing/adrs/: 0001-doc-site-engine.md  0002-code-architecture-pattern.md  0003-data-ingestion-framework.md  0004-dynamic-mapping-dsl.md  0005-entity-related-data.md  _template.md  index.md
docs/src/contributing/code/: architecture-tests.md  audit-implemantation.md  best-practices.md  code-conventions.md  domain-infrastructure.md  domain-model-validations.md  exception-handling.md  index.md
docs/src/deployment/: configuration.md  docker.md  index.md  kubernetes.md  observability.md
docs/src/features/: data-integration.md  index.md  scorecards.md  self-service-actions.md
docs/src/getting-started/: configuration.md  index.md  installation.md  quickstart.md
docs/src/javascripts/: mathjax.js  mermaid-init.js
docs/src/static/: swagger.yaml
(+589 files in other folders)
